[FIX] Align filename between pdf icons & validate btn

--- a/src/modules/upload/components/FileInput/styles.module.scss
+++ b/src/modules/upload/components/FileInput/styles.module.scss
@@ -17,14 +17,16 @@
 
   p {
     position: absolute;
-    bottom: 20%;
+    bottom: 0%;
     left: 50%;
     transform: translateX(-50%);
+    font-weight: 100;
+    font-size: 0.9rem;
   }
 
   img {
     object-fit: contain;
-    width: 400px;
+    width: 18rem;
   }
 
   &:hover {
@@ -42,8 +44,8 @@
     cursor: pointer;
     background: linear-gradient(150deg, var(--color-green), var(--color-blue));
     position: absolute;
-    top: 5%;
-    right: 30%;
+    top: -10%;
+    right: 20%;
 
     &[data-status='true'] {
       background: var(--color-error);
